# resource-management

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
app/: databases.py  main.py  settings.py  test_main.py
app/asset/: models.py  views.py
app/authentication/: clerk.py  dependencies.py  views.py
app/namespace/: models.py  views.py
app/routers/: users.py
app/user/: models.py  views.py
tests/: conftest.py  test_main.py
tests/unit/: test_asset_views.py
tests/unit/namespace/: test_namespace_views.py
tests/unit/user/: test_user_views.py
