[project]
name = "resource-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clerk-backend-api>=1.1.2",
    "fastapi>=0.115.4",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.9.0",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.32.0",
]

[tool.uv]
dev-dependencies = [
    "faker>=30.8.2",
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "rust>=1.3.1",
]
